# hillstoneUnited

./: .gitignore  Makefile.am  README  README.md  _config.yml  configure.ac  element.md  index.md  kill.sh  refDrawing.md  refElement.md  refMain.md  refRobot.md  refSocket.md  start.sh  world.md
_includes/: aside.html
_layouts/: layout.html
hillstoneUnited/: BrainBase.cpp  BrainBase.h  BrainManager.cpp  BrainManager.h  FallDownResponce.cpp  FallDownResponce.h  Makefile  Makefile.am  Makefile.in  ResponceBase.cpp  ResponceBase.h  TestBrain.cpp  TestBrain.h  action.cpp  action.h  brain.cpp  brain.h  brain.hpp  drawing.cpp  drawing.hpp  elementbase.cpp  elementbase.hpp  hillstoneUnited  main.cpp  movementmanager.cpp  movementmanager.h  rcss3dsocket.cpp  rcss3dsocket.h  rcss3dsocket.hpp  robot.cpp  robot.h  robot.hpp  util.h  util.hpp  world.cpp  world.h  world.hpp
hillstoneUnited/.deps/: main.Po  movementmanager.Po  rcss3dsocket.Po  robot.Po  world.Po
hillstoneUnited/MakeWalk/: angletrajectory.cpp  coordinateconverter.cpp  init.cpp  inversekinematics.cpp  invertedpendulum.cpp  jointupdate.cpp  legtrajectory.cpp  legvelocity.cpp  makewalk-set.cpp  makewalk.cpp  makewalk.hpp  outputcommand.cpp  quickinit.cpp  setanklepos.cpp  setheeltoe.cpp  setyawangle.cpp  timeupdate.cpp  update.cpp  walkcontrol.cpp
hillstoneUnited/brain/: adjusttoball.cpp  adjusttoball.hpp  attack.cpp  attack.hpp  brainbase.cpp  brainbase.hpp  defend.cpp  defend.hpp  follow.cpp  follow.hpp  keeper.cpp  keeper.hpp  kickto.cpp  kickto.hpp  kicktofront.cpp  kicktofront.hpp  runto.cpp  runto.hpp  runtoball.cpp  runtoball.hpp  runtoenemy.cpp  runtoenemy.hpp  runtoslowly.cpp  runtoslowly.hpp  testbrain.cpp  testbrain.hpp
hillstoneUnited/movement/: Makefile  Makefile.am  Makefile.in  back.cpp  back.h  dribble.cpp  dribble.h  dummy.cpp  dummy.h  ffmovement.cpp  ffmovement.h  ffwalk.cpp  ffwalk.h  forward.cpp  forward.h  gaback.cpp  gaback.h  gabase.cpp  gabase.h  gabase.hpp  gaforward.cpp  gaforward.h  galdribblesharp.cpp  galdribblesharp.h  gamovement.cpp  gamovement.h  gardribblesharp.cpp  gardribblesharp.h  gasleft.cpp  gasleft.h  gasright.cpp  gasright.h  kick.cpp  kick.hpp  kickmovement.cpp  kickmovement.h  ldribble.cpp  ldribble.h  ldribblesharp.cpp  ldribblesharp.h  (+45 more)
hillstoneUnited/movement/.deps/: gamovement.Po  movementbase.Po  posemovement.Po
