noinst_LIBRARIES = libmovement.a
libmovement_a_SOURCES = movementbase.h movementbase.cpp \
	ticktackbase.h ticktackbase.cpp \
	dummy.h dummy.cpp \
	standup.h standup.cpp \
	ffwalk.h ffwalk.cpp

# mSources = movementbase.h movementbase.cpp \
# 	posemovement.h posemovement.cpp


# EXTRA_DIST = movementbase.h movementbase.cpp \
# 	posemovement.h posemovement.cpp \
#   gamovement.h gamovement.cpp
