noinst_LIBRARIES = libmovement.a
libmovement_a_SOURCES = movementbase.h movementbase.cpp \
	ticktackbase.h ticktackbase.cpp \
	forward.h forward.cpp \
	slowforward.h slowforward.cpp \
	dribble.h dribble.cpp \
	ldribble.h ldribble.cpp \
	rdribble.h rdribble.cpp \
	ldribblesharp.h ldribblesharp.cpp \
	rdribblesharp.h rdribblesharp.cpp \
	back.h back.cpp \
	slowback.h slowback.cpp \
	tleft.h tleft.cpp \
	tright.h tright.cpp \
	tleftin.h tleftin.cpp \
	trightin.h trightin.cpp \
	sleft.h sleft.cpp \
	sright.h sright.cpp \
	gabase.h gabase.cpp \
	gaforward.h gaforward.cpp \
	gaback.h gaback.cpp \
	galdribblesharp.h galdribblesharp.cpp \
	gardribblesharp.h gardribblesharp.cpp \
	gasleft.h gasleft.cpp \
	gasright.h gasright.cpp \
	dummy.h dummy.cpp \
	standup.h standup.cpp \
	ffwalk.h ffwalk.cpp

# mSources = movementbase.h movementbase.cpp \
# 	posemovement.h posemovement.cpp


# EXTRA_DIST = movementbase.h movementbase.cpp \
# 	posemovement.h posemovement.cpp \
#   gamovement.h gamovement.cpp
